--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML LANG="ru">
 <HEAD><META charset="utf-8">
-    <TITLE>Пример страницы</TITLE>
+    <TITLE>HOW-TO: Программа на Python, Часть 1</TITLE>
 </HEAD>
 <BODY>
 <h1>HOW-TO: Программа на Python, Часть 1</h1>
