--- a/index3.html
+++ b/index3.html
@@ -4,42 +4,63 @@
     <TITLE>HOW-TO: Программа на Python, Часть 3</TITLE>
 </HEAD>
 <BODY>
-<h1>HOW-TO: Программа на Python, Часть 2</h1>
+<h1>HOW-TO: Программа на Python, Часть 3</h1>
 <ul class="center">
     <li><i>Программа на Python — часть 1</i></li>
     <li><i>Программа на Python — часть 2</i></li>
     <li><i>Программа на Python — часть 3</i></li>
 </ul>
 <h2>Содержание</h2>
-<h3>HOW-TO: Программа на Python, Часть 2</h3>
+<h3>HOW-TO: Программа на Python, Часть 3</h3>
 <ul>
-    <li><u>Списки</u></li>
-    <li><u>Комментарии</u></li>
+    <li><u>Модули</u></li>
+    <li><u>Функции</u></li>
 </ul>
-<p>
-    Впрошлом уроке мы рассмотрели простую программу, которая использовала raw_input  для получения ответа пользователя, простые типы переменных и простой цикл <b>«for»</b>. В  этом уроке мы рассмотрим ещё больше типов переменных и напишем ещё больше  программ. </p>
-
-<h2>Списки</h2>
-<p>Давайте рассмотрим другой тип переменных, который называется <i>списки</i>. В других  языках программирования они называются <i>массивами</i>. Если мы обратимся к аналогии с  коробками для обуви, то массив (список) представляет собой несколько склеенных друг с  другом коробок с одинаковыми вещами. Например, в одной коробке лежат вилки, в  другой — ножи, в третьей — ложки. Посмотрим на простой список— список месяцев. Мы  запрограммируем его так:
+<p>В прошлый раз мы изучали списки, подстановку переменных, комментарии, сравнение и  присвоение, операторы <b>if</b> и <b>while</b>. Я обещал, что в этой части мы изучим модули и  функции. Давайте начнём.
 </p>
-<pre>months =
-['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']
+<h2>Модули</h2>
+<p>Модули предлагают способ расширить программирование на Python. Вы можете создать  свои модули, использовать те, которые поставляются с Python или которые написали  другие. В самом Python есть сотни модулей, которые облегчают написание программ.  Список модулей, поставляемых с Python, находится по адресу:
+    <u><i>http://docs.python.org/modindex.html.</i></u> Некоторые модули предназначены для определённых  операционных систем, но большинство из них кроссплатформенные и работают  одинаково на <u>Linux</u>, <u>Mac</u> и <u>Microsoft Windows</u>. Для использования внешнего модуля  необходимо импортировать его в программу. Один из модулей, поставляемых с Python,  называется «random». Он даёт возможность генерировать псевдослучайные числа. Мы  используем этот модуль в нашем первом примере.
+</p>
+<pre>#=======================================
+# random_example.py
+# Module example using the random module
+#=======================================
+import random
+# print 14 random integers
+for cntr in range(1,15):
+ print random.randint(1,10)
 </pre>
-<p>Чтобы создать список, мы заключили все значения в квадратные скобки ( '[' и ']' ). Мы  назвали наш список '<i>months</i>'. Чтобы использовать список, мы дадим команду print  <b>months[0]</b> или <b>months[1]</b> (которые выведут на экран <i>'Jan'</i> или <i>'Feb'</i>). Помните: счет  начинается с нуля. Чтобы найти длину списка, можно использовать такую функцию:
+<p>Давайте разберём код по строкам. Первые четыре строки — это комментарии, о которых  мы говорили в прошлый раз. Пятая строка говорит Python, что нужно использовать  модуль «random». Мы должны явно указать Python на это.
 </p>
-<pre>print len(months)</pre>
-<p>которая вернёт 12.</p>
-<p>Ещё один пример списков — категории в поваренной книге. Например…
-</p>
-<pre>categories = ['Main dish','Meat','Fish','Soup','Cookies'] </pre>
-<p>Таким образом, в categories[0] хранится 'Main dish', а в categories[4] — 'Cookies'. Всё  очень просто. Я уверен, вы сможете придумать много других примеров использования  списков.
-</p>
-<h2>Комментарии </h2>
-<p>Далее, мы должны обсудить комментарии. Комментарии важны по нескольким причинам.  Они не только говорят вам или другим людям, что вы пытаетесь делать, но и напомнят  вам через полгода, что же вы хотели сделать. Когда вы будете писать много программ,  комментарии станут важными. Также при их помощи вы заставите Python игнорировать  какие-либо части кода. Чтобы закомментировать строку, поставьте перед ней знак '#'.  Например:
-</p>
-<pre># </pre>
-<p>Это комментарий </p>
-<p>Комментарии можно вставлять в любое место в строке, но помните, что Python  проигнорирует всё, что идёт после '#'.
-</p>
+<h2>Функции
+</h2>
+<p>Когда мы импортировали модуль random, мы использовали функцию <b>randint</b>(). Функция  — это блок кода, который создан для того, чтобы вызывать его в программе, обычно,  более одного раза. Это упрощает работу над программой и предотвращает набор одного и  того же кода снова и снова. Грубо говоря, если вам нужно написать некоторый код  больше, чем 1-2 раза, стоит сделать его функцией. Хотя следующие два примера очень  простые, это хорошие примеры функций. Теперь мы хотим, скажем, взять два числа,  сложить их, перемножить, вычесть одно из другого, затем вывести на экран эти числа и  результаты одновременно. Допустим, нам нужно сделать это три раза для трёх наборов  чисел. Тогда наш пример будет выглядеть как код ниже. </p>
+<pre>#silly example
+print '%d + %d = %d ' % (1,2,1+2)
+print '%d * %d = %d ' % (1,2,1*2)
+print '%d - %d = %d ' % (1,2,1-2)
+print '\n'
+print '%d + %d = %d ' % (1,4,1+4)
+print '%d * %d = %d ' % (1,4,1*4)
+print '%d - %d = %d ' % (1,4,1-4)
+print '\n'
+print '%d + %d = %d ' % (10,5,10+5)
+print '%d * %d = %d ' % (10,5,10*5)
+print '%d - %d = %d ' % (10,5,10-5)
+print '\n'
+</pre>
+<p>Здесь нужно не только набрать много текста, но и непременно возникнут ошибки как при  написании, так и при внесении изменений. Вместо этого мы создадим функцию, которую  назовём <i>«<b>DoTwo</b>»</i>. Она будет каждый раз брать два числа, проводить математические  операции и выводить результат. Начнём с ключевого слова <i>«<b>def</b>»</i>, которое сигнализирует  о том, что мы собираемся определить функцию. После слова <i>«<b>def</b>»</i> добавим название  функции и список параметров, если таковые имеются, в круглых скобках. Эту строку  необходимо завершить двоеточием. Код функции набирается с отступом. Наш  улучшенный простой пример (<u>№2</u>) показан ниже. </p>
+<pre>#silly example 2...still silly, but better
+def DoTwo(num1,num2):
+print '%d + %d = %d ' % (num1,num2,num1+num2)
+print '%d * %d = %d ' % (num1,num2,num1*num2)
+print '%d - %d = %d ' % (num1,num2,num1-num2)
+print '\n'
+DoTwo(1,2)
+DoTwo(1,4)
+DoTwo(10,5)
+</pre>
+<p>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет что либо поменять в функции, мы сможем сделать это, не создавая проблем для нашей  программы. Чтобы вызвать функцию, нужно написать её имя и параметры.</p>
 </BODY>
 </HTML>
